# dielectrics

./: .gitattributes  .gitignore  .pre-commit-config.yaml  FW_config.yaml  citation.cff  help.md  license  pyproject.toml  readme.md
.github/workflows/: gh-pages.yml
data/: our-data-with-fom-pbe-gt-350.csv
data/airss/NaLiTa2O6/: 2022-06-24-NaLiTa2O6=mp-755367-Cu->Na.cif  NaLiTa2O6.cell  NaLiTa2O6.cell.7d534e05  NaLiTa2O6.param  readme.md
data/airss/NaLiTa2O6/good_castep/: NaLiTa2O6-278253-7007-1.res  NaLiTa2O6-278256-6811-1.res  NaLiTa2O6-28290-4142-1.res  NaLiTa2O6-284963-3235-1.res  NaLiTa2O6-R32.res
data/cgcnn/: cgcnn-refract-enrich-big.csv  cgcnn-refract-enrich-small.csv
data/experiment/: Bi2Zr2O7-Fm3m-rietveld-plot.txt  Bi2Zr2O7-Fm3m-rietveld-ticks.txt  Bi2Zr2O7-diel-vs-freq.csv  Bi2Zr2O7-impedance.csv  CsTaTeO6-Fd3m-rietveld-plot.txt  CsTaTeO6-Fd3m-rietveld-ticks.txt  CsTaTeO6-Ta2O5-xrd-ticks.txt  CsTaTeO6-diel-vs-freq.csv  both-diel-vs-freq+impedance.xlsx  dielectrics-diffuse-reflectance.csv  dielectrics-tauc-bandgaps.csv  mp-1225854-W->Te-CsTaTeO6-dft-pbe.cif
data/mp-exploration/: all-mp-formulas.csv  mp-diel-vasp-input.csv  mp-doses.csv
data/others/petousis/: exp-petousis.csv  exp-vs-dfpt-diel-const.csv
data/others/qz3/: process_qz3.py  readme.md
data/others/wbm/: join_mp_wbm.py  readme.md
data/others/yim/: bandgaps.csv  dielectrics.tgz  parse_yim_data.py  readme.md  yim_eda.py
data/wren/bandgap/: wren-bandgap-mp+wbm.csv  wren-bandgap>0-mp+wbm-robust.csv  wren-bandgap>0-mp+wbm.csv  wren-elemsub-mp+wbm-bandgap.csv
data/wren/diel/: wren-elemsub-mp+wbm-diel-elec.csv  wren-elemsub-mp+wbm-diel-ionic.csv  wren-mp-diel-elec-ensemble-excl-petousis.csv  wren-mp-diel-elec-ensemble-robust-trained-on-all-mp.csv  wren-mp-diel-elec-ensemble-robust.csv  wren-mp-diel-elec-ensemble-trained-on-all-mp.csv  wren-mp-diel-ionic-ensemble-excl-petousis.csv  wren-mp-diel-ionic-ensemble-robust-trained-on-all-mp.csv  wren-mp-diel-ionic-ensemble-robust.csv  wren-mp-diel-ionic-ensemble-trained-on-all-mp.csv
data/wren/enrich/: wren-diel-enrich-big-ionic.csv  wren-diel-enrich-expt-big-electronic.csv  wren-diel-enrich-expt-big-total.csv  wren-diel-enrich-small-n.csv  wren-diel-test-elec+ionic-multitask.csv  wren-diel-test-electronic.csv  wren-diel-test-ionic.csv  wren-diel-test-total.csv  wren-refract-enrich-big.csv
data/wren/screen/: readme.md  wren-diel-single-robust-mp+wbm-fom-elemsub-seeds.csv  wren-elemsub-mp+wbm-eform.csv
dielectrics/: __init__.py  dynamic_stability.py  fireworks.py
dielectrics/airss/: investigate_airss_structures.py
dielectrics/db/: __init__.py  change_field_dtype.py  fetch_data.py  manage_collections.py  readme.md  round_float_fields.py  submit_wfs.py
dielectrics/element_substitution/: __init__.py  plot_elemsub_matrix.py  substitute_elements.py
dielectrics/ml/alignn/: wren_vs_alignn_on_elemsub_structs.py
dielectrics/ml/cgcnn/: cgcnn-readme.md  compare_wren_cgcnn_enrich.py  select_cgcnn_for_vasp_val.py
dielectrics/ml/wren/: wren-readme.md
dielectrics/ml/wren/bandgap/: eval_wren_bandgap.py
dielectrics/ml/wren/diel/: diel_direct_vs_indi_vs_multitask.py  eval_wren_diel.py  wren_vs_exp_petousis.py
dielectrics/ml/wren/screen/: select_elemsub_wren_preds_for_vasp_val.py  select_wren_preds_for_vasp_val.py
dielectrics/mp_exploration/: __init__.py  diel_ionic_electronic_corr_scatter.py  fetch_diel_data.py  fetch_mp_doses.py  mp_diel_vasp_input.py  mp_eda.py
dielectrics/paper/: numbers.py  pareto-plotly.html  pareto_plotly_dash.py
dielectrics/patched_phase_diagram/: __init__.py  combine_mp_wbm_ppd.py  get_ppd_hull_distance.py
dielectrics/plots/: __init__.py  collect_stats.py  experimental.py  own_data_eda.py  pareto-plotly.html  pareto_matplotlib.py  pareto_plotly.py  pareto_plotly_dash.py  pareto_static.py
dielectrics/render_structs/: ctk_struct_gallery.py  mp_struct_to_cif.py
dielectrics/vasp/: check_polar.py  diel_builder.py  exp_petousis_vs_us_mp.py  parity_wren_vs_pbe.py  rolling_mae_pbe_vs_wren.py  scatter_wren_vs_pbe.py  us_vs_matproj.py  vasp_vs_ml.py
fireworks-config/: FW_config.yaml  my_fworker.yaml  my_qadapter.yaml
paper/: numbers.py  paper.tex  paper.typ  pareto_plotly_dash.py  parity.py  readme.md  references.bib  template.typ
paper/2024-01-29-matter/: arxiv-abstract.md  cover-letter.typ  matter-reviews.md
